# drf-test

./: .gitignore  README.md  pyproject.toml
django_project/: settings.py  urls.py
my_app/: admin.py  apps.py  permissions.py  urls.py  views.py
my_app/api/player/: create.py  delete.py  get_list.py  update.py
my_app/api/team/: process.py
my_app/migrations/: 0001_initial.py
my_app/models/: __init__.py  player.py  player_skill.py
my_app/serializers/: player.py  player_skill.py
my_app/tests/: test_create_player.py  test_delete_player.py  test_list_player.py  test_process_team.py  test_update_player.py
test_output/: test_result.xml
